<resources>
    <string name="app_name">ICareMobileApp</string>

    <string-array name="history_clinic_group">
        <item>@string/txt_history_biological</item>
        <item>@string/txt_history_reason</item>
        <item>@string/txt_history_diagnose</item>
        <item>@string/txt_history_drug</item>
        <item>@string/txt_history_service</item>
    </string-array>
    <string name="txt_history_biological">Sinh Hiệu Trước Đây</string>
    <string name="txt_history_reason">Lý Do Vào Viện</string>
    <string name="txt_history_diagnose">Chẩn Đoán Trước Đây</string>
    <string name="txt_history_drug">Thuốc Đã Sử Dụng</string>
    <string name="txt_history_service">CLS Đã Thực Hiện</string>


    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">\u232B</string>
    <string name="btn_divide">/</string>
    <string name="btn_done">Xong</string>

    <string name="img_des" />
    <string name="btn_again">THỬ LẠI</string>
    <string name="btn_no">No</string>
    <string name="btn_cancel">HỦY</string>
    <string name="btn_delete">XÓA</string>
    <string name="btn_save">LƯU</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="txt_service_not_found">Service Not Found</string>
    <string name="txt_not_connect">Không thể kết nối tới server!!!</string>
    <string name="txt_save_success">Lưu Thông Tin Thành Công</string>
    <string name="txt_delete_success">Xóa Thông Tin Thành Công</string>
    <string name="txt_login_fail">Sai Tên Đăng Nhập Hoặc Mật Khẩu</string>
    <string name="txt_not_available">Đối Tượng Không Phù Hợp</string>
    <string name="txt_fill_blank">Vui Lòng Nhập Thông Tin Tìm Kiếm</string>

    <string name="txt_patient_address">Địa Chỉ</string>
    <string name="txt_patient_code">Mã Bệnh Nhân</string>
    <string name="txt_patient_birthday">Ngày Sinh</string>
    <string name="txt_patient_sex">Giới Tính</string>
    <string name="txt_patient_nation">Dân Tộc</string>
    <string name="txt_patient_street">Số Nhà, Đường</string>
    <string name="txt_patient_phone">Số ĐT</string>
    <string name="txt_patient_passport">Passport</string>
    <string name="txt_patient_ide">CMND</string>
    <string name="txt_parent_ide">CMND Bố (Mẹ)</string>
    <string name="txt_patient_email">Email</string>
    <string name="txt_patient_job">Nghề Nghiệp</string>
    <string name="txt_patient_relative">Thân Nhân</string>
    <string name="txt_patient_object">Đối Tượng</string>
    <string name="txt_patient_name">Họ và Tên</string>
    <string name="txt_parent_name">Họ và Tên Bố (Mẹ)</string>
    <string name="txt_insurance_code">Số BHYT</string>
    <string name="txt_insurance_start">Từ Ngày</string>
    <string name="txt_insurance_end">Đến Ngày</string>
    <string name="txt_insurance_init">Mã ĐK.KCBBĐ</string>
    <string name="txt_insurance_place">Nơi ĐK.KCBBĐ</string>
    <string name="txt_insurance_object">Mã Nơi ĐT Sinh Sống</string>
    <string name="txt_insurance_5y">Thời Gian Đủ 5 Năm</string>
    <string name="txt_hospital_name">Tên Bệnh Viện</string>
    <string name="txt_insurance_address">Địa Chỉ Thẻ BHYT</string>
    <string name="txt_district">Quận Huyện</string>
    <string name="txt_ethnic">Dân Tộc</string>
    <string name="txt_nation">Quốc Tịch</string>
    <string name="txt_province">Tỉnh Thành</string>
    <string name="txt_ward">Phường Xã</string>
    <string name="txt_job">Nghề Nghiệp</string>
    <string name="txt_married">Hôn Nhân</string>

    <string name="txt_insurance_code_bhi">Số BHTN</string>
    <string name="txt_insurance_company">Tên CTY BH</string>
    <string name="txt_insurance_company_bought">Tên CTY Mua BH</string>
    <string name="txt_insurance_company_bought_address">ĐC CTY Mua BH</string>

    <string name="txt_doctor">Bác Sĩ</string>
    <string name="txt_circuit">Mạch</string>
    <string name="txt_blomin">Huyết Áp</string>
    <string name="txt_blomin_max">H.A Tối Đa</string>
    <string name="txt_blomin_min">H.A Tối Thiểu</string>
    <string name="txt_temper">Nhiệt Độ</string>
    <string name="txt_heartb">Nhịp Tim</string>
    <string name="txt_weight">Cân Nặng</string>

    <string name="txt_dialog_happening">Diễn Biến Bệnh</string>
    <string name="txt_dialog_serviceitem">Chỉ Định</string>
    <string name="txt_dialog_drugorder">Kê Đơn</string>
    <string name="txt_dialog_diagnose">Chẩn Đoán</string>


    <string name="txt_happening">Diễn Biến</string>
    <string name="txt_datetime">Ngày Giờ</string>
    <string name="txt_delete_happening">Xóa Diễn Biến Bệnh</string>

    <string name="txt_serviceitem_code">Mã Dịch Vụ</string>
    <string name="txt_serviceitem_name">Tên Dịch Vụ</string>
    <string name="txt_serviceitem_select">Chọn Chỉ Định</string>
    <string name="txt_unit">Đơn Vị Tính</string>
    <string name="txt_unit_use">Đơn Vị Dùng</string>
    <string name="txt_number">Số Lượng</string>
    <string name="txt_price">Đơn giá</string>
    <string name="txt_note">Ghi Chú</string>
    <string name="txt_total">Thành Tiền</string>
    <string name="txt_surcharge">Phụ Thu</string>

    <string name="txt_register_code">Mã Đăng Ký</string>
    <string name="txt_register_date">Ngày Đăng Ký</string>
    <string name="txt_register_object">Đối Tượng</string>

    <string name="txt_price_insurance">Giá BHYT</string>
    <string name="txt_diagnose">Chuẩn đoán</string>
    <string name="txt_diagnose_selected">Chọn Chẩn Đoán</string>
    <string name="txt_diagnose_code">Mã ICD 10</string>
    <string name="txt_diagnose_name_en">Tên Tiếng Anh</string>
    <string name="txt_diagnose_name_vn">Tên Tiếng Việt</string>
    <string name="txt_diagnose_primary">Bệnh Chính</string>
    <string name="txt_diagnose_unprimary">Bệnh Phụ</string>

    <string name="txt_drugorder_code">Mã Biệt Dược</string>
    <string name="txt_drugorder_activeingre">Hoạt Chất</string>
    <string name="txt_drugorder_use">Cách Dùng</string>
    <string name="txt_drugorder_insurance">Thuốc BHYT</string>
    <string name="txt_drugorder_service">Thuốc DV</string>

    <string name="txt_resolved_status">Tình Trạng</string>
    <string name="txt_resolved_result">Kết Quả</string>
    <string name="txt_resolved_date_discharged">Ngày Xuất viện</string>
    <string name="txt_resolved_advice">Lời Dặn</string>

    <string name="txt_drug_name">Tên Thuốc</string>
    <string name="txt_drug_activeingre">Hoạt Chất</string>
    <string name="txt_drug_type">Loại</string>
    <string name="txt_drug_route">Đường Dùng</string>
    <string name="txt_drug_unit">ĐVT</string>
    <string name="txt_drug_morning">Sáng</string>
    <string name="txt_drug_after">Trưa</string>
    <string name="txt_drug_dinner">Chiều</string>
    <string name="txt_drug_evening">Tối</string>
    <string name="txt_drug_number">Số Ngày</string>
    <string name="txt_drug_total">Tổng Cộng</string>
    <string name="txt_drug_reason">Lý Do</string>
    <string name="btn_drug_add">THÊM</string>
    <string name="btn_search">TÌM KIẾM</string>

    <string name="screen_dashboard">DASHBOARD</string>
    <string name="screen_inpatient">NỘI TRÚ</string>
    <string name="screen_receiving">TIẾP NHẬN</string>
    <string name="screen_register">ĐĂNG KÝ</string>
    <string name="screen_patient_list">DS. BỆNH NHÂN</string>
    <string name="screen_patient_history">LS. BỆNH NHÂN</string>
    <string name="screen_inpatient_list">DS. NỘI TRÚ</string>
    <string name="screen_inpatient_happening">DIỄN BIẾN</string>
    <string name="screen_inpatient_instruction">Y LỆNH</string>
    <string name="tab_tham_kham">Thăm khám</string>
    <string name="tab_service_item">Chỉ định</string>
    <string name="tab_drug_order">Kê đơn</string>
    <string name="tab_drug_order_outside">Thuốc mua ngoài</string>
    <string name="tab_diagnose">Chẩn đoán</string>
    <string name="tab_happening">Diễn biến</string>
    <string name="tab_resolve">Xử Trí</string>
    <string name="tab_info">Thông Tin</string>
    <string name="tab_receive">Tiếp Nhận</string>
    <string name="tab_history_register">LS. Đăng Ký</string>
    <string name="tab_history_clinic">LS. Khám Bệnh</string>

    <string name="txt_err_drug">Vui lòng chọn thuốc</string>
    <string name="txt_err_number">Vui lòng chọn số ngày</string>

    <string name="txt_medexa">Chuyên Khoa</string>
    <string name="txt_medexa_selected">Chọn Chuyên Khoa</string>

    <string name="item_menu_date_filter">Theo Ngày</string>
    <string name="item_menu_group_filter">Theo Nhóm</string>

    <string name="txt_service_selected">Chọn Dịch Vụ</string>
    <string name="txt_service_name">Tên dịch vụ</string>
    <string name="txt_select">Chọn</string>

    <string name="title_info">THÔNG TIN BỆNH NHÂN</string>
    <string name="title_receive">TIẾP NHẬN BỆNH NHÂN</string>
    <string name="title_hi">BẢO HIỂM Y TẾ</string>
    <string name="title_bhi">BẢO HIỂM TƯ NHÂN</string>
    <string name="txt_symptom">Triệu Chứng</string>
    <string name="txt_discount">Chiết Khấu</string>
    <string name="txt_receive_type">Loại Tiếp Nhận</string>
    <string name="txt_place_introduce">Nơi Giới Thiệu</string>
    <string name="txt_price_type">Loại Giá</string>
    <string name="txt_object_receive">Đối Tượng Tiếp Nhận</string>
    <string name="txt_formality">Hình Thức</string>
    <string name="txt_document">Chứng Từ</string>
    <string name="txt_document_type">Loại Chứng Từ</string>
    <string name="txt_insurance_routes">Tuyến Bảo Hiểm</string>
    <string name="txt_insurance_ratio">Tỉ Lệ</string>
    <string name="txt_other_source">Nguồn Khác</string>


</resources>
