<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/arrow"
        android:layout_width="250dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keyboard"
        app:layout_constraintVertical_bias="0"/>

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/keyboard_background"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@id/arrow"
        app:layout_constraintStart_toStartOf="@id/arrow"
        app:layout_constraintEnd_toEndOf="@id/arrow"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/key1"
                style="@style/keyboard_number_button"
                android:text="@string/number_one" />

            <TextView
                android:id="@+id/key2"
                style="@style/keyboard_number_button"
                android:text="@string/number_two" />

            <TextView
                android:id="@+id/key3"
                style="@style/keyboard_number_button"
                android:text="@string/number_three" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/key4"
                style="@style/keyboard_number_button"
                android:text="@string/number_four" />

            <TextView
                android:id="@+id/key5"
                style="@style/keyboard_number_button"
                android:text="@string/number_five" />

            <TextView
                android:id="@+id/key6"
                style="@style/keyboard_number_button"
                android:text="@string/number_six" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/key7"
                style="@style/keyboard_number_button"
                android:text="@string/number_seven" />

            <TextView
                android:id="@+id/key8"
                style="@style/keyboard_number_button"
                android:text="@string/number_eight" />

            <TextView
                android:id="@+id/key9"
                style="@style/keyboard_number_button"
                android:text="@string/number_nine" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/keydivide"
                style="@style/keyboard_button"
                android:text="@string/btn_divide"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/key0"
                style="@style/keyboard_number_button"
                android:text="@string/number_zero" />

            <TextView
                android:id="@+id/keyclear"
                style="@style/keyboard_button"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow style="@style/keyboard_row">
            <TextView
                android:id="@+id/keydone"
                style="@style/keyboard_button"
                android:text="@string/btn_done"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>