<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_16"
    android:weightSum="1"
    android:orientation="horizontal">

    <ptt.vn.icaremobileapp.custom.MyTextView
        android:id="@+id/tvServiceCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        app:label="@string/txt_serviceitem_code" />

    <ptt.vn.icaremobileapp.custom.MyTextView
        android:id="@+id/tvServiceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        app:label="@string/txt_serviceitem_name" />

    <ptt.vn.icaremobileapp.custom.MyTextView
        android:id="@+id/tvUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        app:label="@string/txt_unit_use" />

    <ptt.vn.icaremobileapp.custom.MyTextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        app:label="@string/txt_number" />

    <ptt.vn.icaremobileapp.custom.MyTextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        app:label="@string/txt_total"
        android:layout_weight="0.2"/>

</LinearLayout>