<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_0"
    android:orientation="vertical">

    <ptt.vn.icaremobileapp.custom.MyTextView
        android:id="@+id/tvPatientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_0"
        android:layout_marginEnd="@dimen/dp_0"
        app:label="@string/txt_patient_address" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvPatientCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_weight="1"
                app:label="@string/txt_patient_code" />

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvPatientBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_weight="1"
                app:label="@string/txt_patient_birthday" />

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvPatientSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_weight="1"
                app:label="@string/txt_patient_sex" />
        </LinearLayout>

        <ptt.vn.icaremobileapp.custom.MyTextView
            android:id="@+id/tvHappening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_32"
            app:label="@string/txt_dialog_happening" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_weight="1"
                app:label="@string/txt_doctor" />

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvCircuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_weight="1"
                app:label="@string/txt_circuit" />

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvBlood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_weight="1"
                app:label="@string/txt_blomin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_4"
            android:orientation="horizontal">

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvTemper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_weight="1"
                app:label="@string/txt_temper" />

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvHeartb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_weight="1"
                app:label="@string/txt_heartb" />

            <ptt.vn.icaremobileapp.custom.MyTextView
                android:id="@+id/tvWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_32"
                android:layout_weight="1"
                app:label="@string/txt_weight" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>